--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <title>pmcoltrane</title>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
     </head>
-    <body>
-        <h1>pmcoltrane</h1>
-        <p>Placeholder page for future content.</p>
+    <body ng-app="myApp" ng-controller="myCtrl">
+        <!-- Angular Material Dependencies -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+        <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
+        <script src="js/app.js" type="text/javascript"></script>
+        <header>
+            <img ng-src="{{profileData.avatar_url}}" width="96px" height="96px" style="float:left" />
+            <h1>pmcoltrane</h1>
+        </header>
+        <article style="clear:both">
+            <p>Welcome to my GitHub Pages site. This is a work-in-progress. For now, please find my GitHub projects listed below.</p>
+            <ul>
+                <li ng-repeat="repo in repos | filter: {name: '!pmcoltrane.github.io'}"><a ng-href="{{repo.url}}">{{repo.name}}</a> - {{repo.description || 'No description available'}}</li>
+            </ul>
+        </article>
     </body>
 </html>
