--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <title>pmcoltrane</title>
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
-    </head>
-    <body ng-app="myApp" ng-controller="myCtrl">
         <!-- Angular Material Dependencies -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
@@ -13,15 +11,23 @@
         <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
         <script src="js/app.js" type="text/javascript"></script>
+    </head>
+    <body ng-app="pmcApp" ng-controller="pmcCtrl">
         <header>
             <img ng-src="{{profileData.avatar_url}}" width="96px" height="96px" style="float:left" />
             <h1>pmcoltrane</h1>
         </header>
         <article style="clear:both">
             <p>Welcome to my GitHub Pages site. This is a work-in-progress. For now, please find my GitHub projects listed below.</p>
-            <ul>
-                <li ng-repeat="repo in repos | filter: {name: '!pmcoltrane.github.io'}"><a ng-href="{{repo.html_url}}">{{repo.name}}</a> - {{repo.description || 'No description available'}}</li>
-            </ul>
+            <md-list>
+                <md-list-item class="md-2-line" ng-repeat="repo in reposData | filter: {name: '!pmcoltrane.github.io'}" ng-click="navigateTo(repo.html_url);">
+                    <img src="assets/GitHub-Mark-32px.png" style="padding-right: 5px;"/>
+                    <div class="md-list-item-text">
+                        <strong>{{repo.name}}</strong>
+                        <small>{{repo.description || 'No description available'}}</small>
+                    </div>
+                </md-list-item>
+            </md-list>
         </article>
     </body>
 </html>
