--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <title>pmcoltrane</title>
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <!-- Angular Material Dependencies -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
@@ -14,11 +15,12 @@
     </head>
     <body ng-app="pmcApp" ng-controller="pmcCtrl">
         <header>
-            <img ng-src="{{profileData.avatar_url}}" width="96px" height="96px" style="float:left" />
+            <img ng-src="{{profileData.avatar_url}}" width="96px" height="96px" style="float:left;margin-right:5px;" />
             <h1>pmcoltrane</h1>
-        </header>
-        <article style="clear:both">
+            <br/>
             <p>Welcome to my GitHub Pages site. This is a work-in-progress. For now, please find my GitHub projects listed below.</p>
+        </header>
+        <article class="md-whiteframe-1dp" style="clear:both" layout="column" layout-align="center center">
             <md-list>
                 <md-list-item class="md-2-line" ng-repeat="repo in reposData | filter: {name: '!pmcoltrane.github.io'}" ng-click="navigateTo(repo.html_url);">
                     <img src="assets/GitHub-Mark-32px.png" style="padding-right: 5px;"/>
