--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+        <meta charset="utf-8">
         <title>pmcoltrane</title>
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <!-- Angular Material Dependencies -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-        <!-- Angular Material Javascript now available via Google CDN; version 0.11.2 used here -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
-        <script src="js/app.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
-    <body ng-app="pmcApp" ng-controller="pmcCtrl">
-        <header>
-            <img ng-src="{{profileData.avatar_url}}" width="96px" height="96px" style="float:left;margin-right:5px;" />
-            <h1>pmcoltrane</h1>
-            <br/>
-            <p>Welcome to my GitHub Pages site. This is a work-in-progress. For now, please find my GitHub projects listed below.</p>
-        </header>
-        <article class="md-whiteframe-1dp" style="clear:both" layout="column" layout-align="center center">
-            <md-list>
-                <md-list-item class="md-2-line" ng-repeat="repo in reposData | filter: {name: '!pmcoltrane.github.io'}" ng-click="navigateTo(repo.html_url);">
-                    <img src="assets/GitHub-Mark-32px.png" style="padding-right: 5px;"/>
-                    <div class="md-list-item-text">
-                        <strong>{{repo.name}}</strong>
-                        <small>{{repo.description || 'No description available'}}</small>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </article>
+    <body>
+        <header><h1>pmcoltrane</h1></header>
+        <main>
+            <article id="about">
+                <h1>About</h1>
+
+                <p>
+                    <strong>I am a professional software engineer.</strong><br>
+                    See my <a href="https://www.linkedin.com/in/phil-coltrane-33523444/"><img src="LI-In-Bug.png" class="inline-logo" alt="LinkedIn logo">LinkedIn profile</a> for my resum&eacute; and other work history.<br>
+                    Have we worked together? Let's connect.<br>
+                </p>
+
+                <p style="text-align:center">
+                    <strong>I start projects I don't finish.</strong>
+                </p>
+
+                <p>
+                    <strong>I write code.</strong><br>
+                    I've been a coder all my life, usually on the desktop.<br>
+                    Today my primary languages are C# and C++.<br>
+                    Yesteryear saw me use VB, VB.NET, C, and Javascript.<br>
+                    My <a href="https://github.com/pmcoltrane"><img src="github-mark.png" class="inline-logo" alt="GitHub logo">GitHub</a> repositories are littered with old half-done projects.
+                </p>
+
+                <p style="text-align:right">
+                    <strong>I tinker with electronics.</strong><br>
+                    KiCad is my EDA tool of choice.<br>
+                    My workbench is usually a bit of a mess.<br>
+                    At desoldering, sadly, I have a black thumb.<br>
+                    Sometimes I mention those projects on my <a href="https://pmcoltrane.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">personal blog</a>.<br>
+                </p>
+
+                <p>
+                    <strong>Sometimes I <s>tell lies </s>write sci-fi stories.</strong><br>
+                    I usually don't finish those, either.<br>
+                    You can read a few at <a href="https://ftlpizza.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">my writing blog</a>.<br>
+                </p>
+
+            </article>
+        </main>
+        <footer>
+            Copyright &copy; 2024 pmcoltrane.
+        </footer>
     </body>
 </html>
