Make it look better on mobile.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>pmcoltrane</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
@@ -11,39 +12,40 @@
     <body>
         <header><h1>pmcoltrane</h1></header>
         <main>
-            <article id="about">
-                <h1>About</h1>
+            <article id="about" style="text-align:center;">
+                <h2>I am a professional software engineer</h2>
 
                 <p>
-                    <strong>I am a professional software engineer.</strong><br>
-                    See my <a href="https://www.linkedin.com/in/phil-coltrane-33523444/"><img src="LI-In-Bug.png" class="inline-logo" alt="LinkedIn logo">LinkedIn profile</a> for my resum&eacute; and other work history.<br>
+                    See my <a href="https://www.linkedin.com/in/phil-coltrane-33523444/"><img src="LI-In-Bug.png" class="inline-logo" alt="LinkedIn logo">LinkedIn profile</a> for my resum&eacute;.<br>
                     Have we worked together? Let's connect.<br>
                 </p>
 
-                <p style="text-align:center">
-                    <strong>I start projects I don't finish.</strong>
-                </p>
+                <h3>(I start projects I don't finish)</h3>
 
+                <h2>I write code</h2>
                 <p>
-                    <strong>I write code.</strong><br>
-                    I've been a coder all my life, usually on the desktop.<br>
-                    Today my primary languages are C# and C++.<br>
-                    Yesteryear saw me use VB, VB.NET, C, and Javascript.<br>
-                    My <a href="https://github.com/pmcoltrane"><img src="github-mark.png" class="inline-logo" alt="GitHub logo">GitHub</a> repositories are littered with old half-done projects.
+                    Today, primarily in C# and C++.<br>
+                    Yesteryear, VB, VB.NET, C, and Javascript.<br>
+                    My <a href="https://github.com/pmcoltrane"><img src="github-mark.png" class="inline-logo" alt="GitHub logo">GitHub</a> is littered with projects half-done.<br>
                 </p>
 
-                <p style="text-align:right">
-                    <strong>I tinker with electronics.</strong><br>
+                <h3>(I start projects I don't finish)</h3>
+
+                <h2>I tinker with electronics</h2>
+                <p>
                     KiCad is my EDA tool of choice.<br>
                     My workbench is usually a bit of a mess.<br>
                     At desoldering, sadly, I have a black thumb.<br>
-                    Sometimes I mention those projects on my <a href="https://pmcoltrane.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">personal blog</a>.<br>
+                    Sometimes I mention them on my <a href="https://pmcoltrane.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">personal blog</a>.<br>
                 </p>
 
+                <h3>(I start projects I don't finish)</h3>
+
+                <h2>I <s>tell lies </s>write stories</h2>
                 <p>
-                    <strong>Sometimes I <s>tell lies </s>write sci-fi stories.</strong><br>
+                    Mostly science fiction stories.<br>
                     I usually don't finish those, either.<br>
-                    You can read a few at <a href="https://ftlpizza.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">my writing blog</a>.<br>
+                    You can read a few at <a href="https://ftlpizza.wordpress.com"><img src="ftlpizza.png" class="inline-logo" alt="Wordpress logo">my writing blog</a>.<br>
                 </p>
 
             </article>
