--- a/index.html
+++ b/index.html
@@ -11,42 +11,119 @@
     </head>
     <body>
         <header><h1>pmcoltrane</h1></header>
+        <nav id="sidebar">
+
+
+        </nav>
         <main>
+
+            <article class="speech left">Who are you, pmcoltrane?</article>
             <article id="about" style="text-align:center;">
-                <h2>I am a professional software engineer</h2>
 
+                <h2>I am a software engineer</h2>
                 <p>
-                    See my <a href="https://www.linkedin.com/in/phil-coltrane-33523444/"><img src="LI-In-Bug.png" class="inline-logo" alt="LinkedIn logo">LinkedIn profile</a> for my resum&eacute;.<br>
-                    Have we worked together? Let's connect.<br>
+                    I write code, mostly in <strong>C++</strong> and <strong>C#</strong><br>
+                    I <strong>mentor junior developers</strong> and interns.<br>
+                    Have we worked together?<br> 
+                    Should we work together?<br>
+                    <a href="https://www.linkedin.com/in/phil-coltrane-33523444/"><img src="media/LI-In-Bug.png" class="inline-logo" alt="LinkedIn logo">Let's connect</a>.<br>
                 </p>
 
-                <h3>(I start projects I don't finish)</h3>
-
-                <h2>I write code</h2>
-                <p>
-                    Today, primarily in C# and C++.<br>
-                    Yesteryear, VB, VB.NET, C, and Javascript.<br>
-                    My <a href="https://github.com/pmcoltrane"><img src="github-mark.png" class="inline-logo" alt="GitHub logo">GitHub</a> is littered with projects half-done.<br>
-                </p>
-
-                <h3>(I start projects I don't finish)</h3>
+                <figure>
+                    <img src="media/pmcoltrane-1.jpg"/>
+                    <figcaption>Me looking serious.</figcaption>
+                </figure><br/>
 
                 <h2>I tinker with electronics</h2>
+
                 <p>
                     KiCad is my EDA tool of choice.<br>
-                    My workbench is usually a bit of a mess.<br>
+                    My workbench is usually a mess.<br>
                     At desoldering, sadly, I have a black thumb.<br>
-                    Sometimes I mention them on my <a href="https://pmcoltrane.wordpress.com"><img src="WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">personal blog</a>.<br>
+                    See my <a href="https://pmcoltrane.wordpress.com"><img src="media/WordPress-logotype-wmark.png" class="inline-logo" alt="Wordpress logo">personal blog</a>.<br>
+                    (Do people still blog?)<br>
                 </p>
 
-                <h3>(I start projects I don't finish)</h3>
+                <figure>
+                    <img src="media/pmcoltrane-2.jpg"/>
+                    <figcaption>Me looking older and serious.</figcaption>
+                </figure>
+            </article>
 
-                <h2>I <s>tell lies </s>write stories</h2>
-                <p>
-                    Mostly science fiction stories.<br>
-                    I usually don't finish those, either.<br>
-                    You can read a few at <a href="https://ftlpizza.wordpress.com"><img src="ftlpizza.png" class="inline-logo" alt="Wordpress logo">my writing blog</a>.<br>
-                </p>
+            <article class="speech left">What have you done?!</article>
+            <article id="accomplishments">
+
+                <h2>&#x2611; Developed Physics-based 3D Simulations</h2>
+                <div class="hanging">
+                    <p>Designed UI and integrated C++ methodologies for scene-based 3D modeling and physics-based simulations.</p>
+                    <p>Led a medium-sized scrum team, guided development, and mentored junior developers.</p>
+                    <p>Demonstrated new functionality to the customer, and acted as a point-of-contact for other development teams.</p>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>C++</li>
+                        <li>C++/CLI</li>
+                        <li>C#, WPF</li>
+                        <li>Sqlite</li>
+                    </ul>
+                </div>
+
+                <h2>&#x2611; Grew a Lemon Tree from Seed</h2>
+                <div class="hanging">
+                    It's only about six months old, but... look at it.
+                    <figure>
+                        <img src="media/lemon-tree.jpg"/>
+                        <figcaption>Look At It!</figcaption>
+                    </figure>
+                </div>
+
+                <h2>&#x2611; Designed &amp; assembled test boards (PCBs)</h2>
+                <div class="hanging">
+                    Prototyped on breadboard, captured hardware design in KiCAD, and assembled test PCBs for simple lab work.
+                    Typically test boards for PMICs, microcontrollers, programmable gate arrays, etc.
+                    <h3>Fun fact</h3>
+                    <p class="note">Work with UART enough, and you can read it straight from the oscilloscope.</p>
+                    <p class="note">(But it's easier to use the UART decoder.)</p>
+                </div>
+
+                <h2>&#x2610; Emigrated to Mars</h2>
+                <div class="hanging">
+                    <p>No, I haven't done this. Yet.</p>
+                    <p>But if SpaceX makes its tickets affordable, maybe I'll retire there.</p>
+                </div>
+
+                <h2>&#x2611; Built In-Process Gauging Solutions</h2>
+                <div class="hanging">
+                    <p>Designing, building, and developing measurement algorithms for custom automted in-process gauges for manufacturing shop floors.</p>
+                    <p>Measurements of flatness, diameters, and pipe thread characteristics (face chamfer, taper, runout, TPI, etc.).</p>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>C/C++</li>
+                        <li>C#, WPF</li>
+                        <li>Siemens Simatic (PLC programming)</li>
+                    </ul>
+                    <h3>A little advice</h3>
+                    <p class="note">Lift with your legs, and always wear steel-toed boots.</p>
+                </div>
+
+                <h2>&#x2610; Reverse-engineered an Alien Spacecraft</h2>
+                <div class="hanging">
+                    <p>Nope, I haven't done this either.</p>
+                    <p>You probably need a TS/SCI clearance for that, right?</p>
+                </div>
+
+                <h2>&#x2611; Developed Machine Monitoring Systems (MMS)</h2>
+                <div class="hanging">
+                    <span>Machine monitoring for manufacturing, primarily Okuma and Fanuc CNC mills and lathes.</span>
+                    <h3>Technologies</h3>
+                    <ul>
+                        <li>Okuma THINC</li>
+                        <li>Fanuc FOCAS</li>
+                        <li>MTConnect</li>
+                        <li>OPC</li>
+                    </ul>
+                    <h3>A little advice</h3>
+                    <p class="note">Follow web best practices in software, and stick to web standards. Don't go proprietary.</p>
+                </div>
 
             </article>
         </main>
