Minor changes to try to fix image size.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="hanging">
                     It's only about six months old, but... look at it.
                     <figure>
-                        <img src="media/lemon-tree.jpg"/>
+                        <img src="media/lemon-tree.jpg" style="max-width:300px;"/>
                         <figcaption>Look At It!</figcaption>
                     </figure>
                 </div>
@@ -126,6 +126,12 @@
                     <p class="note">Follow web best practices in software, and stick to web standards. Don't go proprietary.</p>
                 </div>
 
+            </article>
+
+            <article class="speech left">How can I contact you?</article>
+            <article id="contact" style="text-align:center;">
+                <p>Find me on LinkedIn.</p>
+                <a href="https://www.linkedin.com/in/phil-coltrane-33523444/">pmcoltrane on LinkedIn</a>
             </article>
         </main>
         <footer>
