--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <header><h1>pmcoltrane</h1></header>
-        <nav id="sidebar">
-
-
-        </nav>
         <main>
 
             <article class="speech left">Who are you, pmcoltrane?</article>
@@ -124,6 +119,17 @@
                     </ul>
                     <h3>A little advice</h3>
                     <p class="note">Follow web best practices in software, and stick to web standards. Don't go proprietary.</p>
+                </div>
+
+                <h2>&#x2611; And other cool things...</h2>
+                <div class="hanging">
+                    <p>I've done a lot of other cool things in my life, too.</p>
+                    <p>Did you know that I...</p>
+
+                    <p>...went to school at North Carolina State University?<br>Go Wolfpack!</p>
+                    <p>...worked as a preventive maintenance technician?<br>(At RF Micro Devices... now part of Qorvo)</p>
+                    <p>...write sci-fi stories in my free time?<br>(But nothing published, so far...)</p>
+                    <p>...have worked with a lot of amazing people?<br>Maybe I'll work with you, too, someday.</p>
                 </div>
 
             </article>
